--- a/website-project/user/templates/user/profile.html
+++ b/website-project/user/templates/user/profile.html
@@ -1,5 +1,43 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}
-
+    Profile | Nelfix
 {% endblock title %}
+
+{% block css %}
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+{% endblock css %}
+
+{% block contents %}
+    <div class="min-h-screen bg-gray-600 flex items-center justify-center">
+        <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
+            <h2 class="text-2xl font-bold mb-6 text-gray-800">Your Profile</h2>
+            <div class="mb-4">
+                <label class="block text-base font-medium text-gray-700">Username</label>
+                <p class=" p-2 rounded-md">{{ profile.user.username }}</p>
+            </div>
+
+            <div class="mb-4">
+                <label class="block text-base font-medium text-gray-700">Balance</label>
+                <p class=" p-2 rounded-md">{{ profile.balance }}</p>
+            </div>
+
+            <div class="mb-4">
+                <label class="block text-base font-medium text-gray-700">Email</label>
+                <p class=" p-2 rounded-md">{{ profile.user.email }}</p>
+            </div>
+
+            <div class="mb-4">
+                <label class="block text-base font-medium text-gray-700">Bio</label>
+                <p class=" p-2 rounded-md">{{ profile.bio }}</p>
+            </div>
+            <form method="POST" action="{% url 'user:logout' %}">
+                {% csrf_token %}
+                <button type="submit" class="w-full bg-red-600 text-white py-2 rounded-md hover:bg-red-700 text-center block mt-4">
+                    Logout
+                </button>
+            </form>
+        </div>
+    </div>
+{% endblock contents %}
