--- a/website-project/film/templates/film/film_detail.html
+++ b/website-project/film/templates/film/film_detail.html
@@ -6,8 +6,6 @@
 {% endblock title %}
 
 {% block contents %}
-    
-    
     <!-- Navbar -->
     <nav class="bg-gray-800 p-4 mb-6">
         {% if messages %}
@@ -24,11 +22,10 @@
                     const messageElement = document.getElementById('slide-message');
                     const messageContainer = document.getElementById('message-container');
 
-                    // Slide down: animasi muncul
                     setTimeout(function() {
                         messageElement.classList.remove('-translate-y-full', 'opacity-0');
                         messageElement.classList.add('translate-y-0', 'opacity-100');
-                    }, 100); // Tunggu sedikit sebelum mulai slide down untuk efek halus
+                    }, 100); 
 
                     // Slide up: animasi menghilang setelah 3 detik
                     setTimeout(function() {
@@ -76,22 +73,16 @@
         </div>
     </nav>
 
-    
-
-    {% comment %} {% if messages %}
-    <div class="container mx-auto mt-4">
-        {% for message in messages %}
-            <div class="{% if message.tags == 'success' %}bg-green-100 border-t border-b border-green-500 text-green-700{% elif message.tags == 'error' %}bg-red-100 border-t border-b border-red-500 text-red-700{% endif %} px-4 py-3 rounded mb-4" role="alert">
-                <p>{{ message }}</p>
-            </div>
-        {% endfor %}
-    </div>
-    {% endif %} {% endcomment %}
-
     <!-- Main Content -->
     <div class="container mx-auto flex flex-col md:flex-row items-center justify-between space-y-6 md:space-y-0">
         <div class="w-full md:w-1/3">
-            <img src="{{ film.cover_image.url }}" alt="{{ film.title }}" class="w-full h-auto object-cover rounded-lg shadow-lg">
+            {% if film.cover_image %}
+                <img src="{{ film.cover_image.url }}" alt="{{ film.title }}" class="w-full h-auto object-cover rounded-lg shadow-lg">
+            {% else %}
+                <div class="w-full h-48 bg-gray-500 rounded-lg flex items-center justify-center">
+                    <span class="text-white text-lg font-semibold">No Image</span>
+                </div>
+            {% endif %}
         </div>
         <div class="w-full md:w-2/3 bg-white p-6 rounded-lg shadow-lg">
             <h1 class="text-4xl font-bold mb-4">{{ film.title }}</h1>
