--- a/website-project/film/templates/film/my_list.html
+++ b/website-project/film/templates/film/my_list.html
@@ -48,7 +48,13 @@
                 {% for film in films %}
                     <a href="{% url 'film:film_detail' film.id %}" class="bg-white shadow-lg rounded-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                         <div class="group relative bg-gray-800 text-white p-4 rounded-lg shadow-lg hover:scale-105 transition-transform duration-300">
-                            <img src="{{ film.cover_image.url }}" alt="{{ film.title }}" class="w-full h-48 object-cover rounded-lg">
+                            {% if film.cover_image %}
+                                <img src="{{ film.cover_image.url }}" alt="{{ film.title }}" class="w-full h-48 object-cover rounded-lg">
+                            {% else %}
+                                <div class="w-full h-48 bg-gray-500 rounded-lg flex items-center justify-center">
+                                    <span class="text-white text-lg font-semibold">No Image</span>
+                                </div>
+                            {% endif %}
                             <div class="mt-4">
                                 <h2 class="text-lg font-semibold">{{ film.title }} ({{ film.release_year }})</h2>
                                 <div class="flex space-x-2 mt-2">
